<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background_grey"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asap_medium"
            android:text="@string/app_title"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <ImageView
            android:id="@+id/kid_img"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:src="@drawable/blood_kid"
            android:layout_marginHorizontal="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_line"
            android:textColor="@color/black"
            android:textAlignment="center" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="80dp"/>

        <Button
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="12dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/create_account_btn"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/createAccount"
            android:textSize="17sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="22dp"/>

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:background="@drawable/buttons"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/sign_in"
            android:textSize="17sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/actor"
            android:text="@string/bottom_text"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>